# fast-talk

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  user.py
backend/app/core/: config.py
backend/app/database/: db.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 1586ffb2c6ea_create_tables_messages_and_message_media.py  519ca4579186_create_tables_group_members_groups_.py  5200814e78f0_create_table_users.py  670f172b297b_create_table_user_avatars.py  69e5754890c6_create_table_chats.py  6d484ae9bec9_create_tables_users_and_user_avatars.py  e4314fea0cc3_create_tables_group_members_and_groups.py
backend/app/models/: __init__.py  base.py  chats.py  enums.py  group.py  message.py  user_avatar.py  users.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth_schema.py  user_schema.py
backend/app/services/: auth_service.py  users_service.py
backend/app/utils/: dependencies.py  security.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ChatHeader.vue  CreateGroupModal.vue  MessageInput.vue  MessageItem.vue  MessageList.vue  UserListModal.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  websocket.js
frontend/src/stores/: auth.js  chat.js
frontend/src/views/: ChatList.vue  GroupChat.vue  Login.vue  PrivateChat.vue  Register.vue
