[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["baktiyar <baktiarzaksylykov22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.121.0"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.11.0"
alembic = "^1.17.1"
uvicorn = "^0.38.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
